--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Sort pixels of an image.">
     <title>Pixel Sort</title>
+
 </head>
 <body>
     <div id = "output"></div>
+    <div id = "canvasHolder"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
     <script src = "script.js"></script>
 </body>
 </html>
