--- a/index.html
+++ b/index.html
@@ -5,13 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Sort pixels of an image.">
     <title>Pixel Sort</title>
-
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet"> 
+    <link href = "style.css" rel = "stylesheet">
 </head>
 <body>
-    <div id = "output"></div>
-    <div id = "canvasHolder"></div>
+    <header>
+        <h1>Everything Colors</h1>
+        <h3>client-side image manipulation</h3>
+    </header>
 
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
+    <section id = "section">
+        <h2 id = "dropText">Drop image here...</h2>
+        <div id = "results">
+            <div class = "post" id = "imagePreview"><h2 class = "caption">Original Image</h2></div>
+            <div class = "post" id = "output"><h2 class = "caption">Sorted</h2></div>
+            <div class = "post" id = "canvasHolder"><h2 class = "caption">Color histogram in RGB color space</h2></div>
+        </div>
+    </section>
+
+    <script src = "https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
     <script src = "script.js"></script>
 </body>
 </html>
