--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Description" content="Sort pixels of an image.">
-    <title>Pixel Sort</title>
+    <meta name="Description" content="Client-side image manipulation.">
+    <title>Everything Colors</title>
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet"> 
     <link href = "style.css" rel = "stylesheet">
 </head>
