added github logo to link back to repo

--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
     <link href = "style.css" rel = "stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Everything Colors</h1>
-        <h3>client-side image manipulation</h3>
-    </header>
+
+    <navbar>
+        <header class = "logo">
+            <h1>Everything Colors</h1>
+            <h3>client-side image manipulation</h3>
+        </header>
+        <div class = "buttons">
+            <a href = "https://www.edwardwibowo.com">BITWISE XOR</a>
+            <a href = "https://github.com/claby2/everything-colors" target = "_blank"><img src = "images/github.png"></a>
+        </div>
+    </navbar>
 
     <section id = "section">
         <h2 id = "dropText">Drop image here...</h2>
