--- a/blend/index.html
+++ b/blend/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Client-side image manipulation.">
-    <title>Everything Colors</title>
+    <title>Everything Colors - BLEND</title>
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet"> 
-    <link href = "style.css" rel = "stylesheet">
+    <link href = "../style.css" rel = "stylesheet">
 </head>
 <body>
 
@@ -16,28 +16,28 @@
             <h3>client-side image manipulation</h3>
         </header>
         <div class = "buttons">
-            <a class = "currentPage">HOME</a>
-            <a href = "/blend/">BLEND</a>
+            <a href = "../">HOME</a>
+            <a class = "currentPage">BLEND</a>
             <a href = "/about/">ABOUT</a>
-            <a href = "https://github.com/claby2/everything-colors" target = "_blank"><img src = "images/github.png"></a>
+            <a href = "https://github.com/claby2/everything-colors" target = "_blank"><img src = "../images/github.png"></a>
         </div>
     </navbar>
 
     <section id = "section">
-        <div id = "drop">
+        <div>
             <input id = "dropInput" type = "file" multiple=""></input>
-            <h2 id = "dropText">Drop image (or click here to upload)</h2>
+            <h2 id = "dropText">Drop two images to blend (or click here to upload)</h2>
         </div>
-        <div id = "results">
-            <div class = "post" id = "imagePreview"><h2 class = "caption">Original Image</h2></div>
-            <div class = "post" id = "output"><h2 class = "caption">Sorted</h2></div>
-            <div class = "post" id = "canvasHolder"><h2 class = "caption">Color histogram in RGB color space</h2></div>
+        <div id = "inputs">
+            <section class = "inputSection" id = "inputOne"><h2>Image 1</h2></section>
+            <section class = "inputSection" id = "inputTwo"><h2>Image 2</h2></section>
         </div>
-        <!-- <div id = "modeButtons"></div> -->
+
+
         <div id = "output"></div>
     </section>
 
     <script src = "https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
-    <script src = "script.js"></script>
+    <script src = "blend.js"></script>
 </body>
 </html>
