added support for multiple blend modes

--- a/blend/index.html
+++ b/blend/index.html
@@ -32,9 +32,12 @@
             <section class = "inputSection" id = "inputOne"><h2>Image 1</h2></section>
             <section class = "inputSection" id = "inputTwo"><h2>Image 2</h2></section>
         </div>
-
-
-        <div id = "output"></div>
+        <div id = "blendButtons">
+            <button id = "xorButton" class = "button selectedButton">XOR</button>
+            <button id = "andButton" class = "button">AND</button>
+            <button id = "orButton" class = "button">OR</button>
+        </div>
+        <div id = "blendOutput"></div>
     </section>
 
     <script src = "https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
