--- a/blend/index.html
+++ b/blend/index.html
@@ -18,7 +18,7 @@
         <div class = "buttons">
             <a href = "../">HOME</a>
             <a class = "currentPage">BLEND</a>
-            <a href = "/about/">ABOUT</a>
+            <a href = "./about/">ABOUT</a>
             <a href = "https://github.com/claby2/everything-colors" target = "_blank"><img src = "../images/github.png"></a>
         </div>
     </navbar>
