--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </header>
         <div class = "buttons">
             <a class = "currentPage">HOME</a>
-            <a href = "/blend/">BLEND</a>
-            <a href = "/about/">ABOUT</a>
+            <a href = "./blend/">BLEND</a>
+            <a href = "./about/">ABOUT</a>
             <a href = "https://github.com/claby2/everything-colors" target = "_blank"><img src = "images/github.png"></a>
         </div>
     </navbar>
