added alt tag to github img

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a class = "currentPage">HOME</a>
             <a href = "./blend/">BLEND</a>
             <a href = "./about/">ABOUT</a>
-            <a href = "https://github.com/claby2/everything-colors" target = "_blank"><img src = "images/github.png"></a>
+            <a href = "https://github.com/claby2/everything-colors" target = "_blank"><img src = "images/github.png" alt = "GitHub"></a>
         </div>
     </navbar>
 
