added color palette feature

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Client-side image manipulation.">
     <title>Everything Colors</title>
+    <script src="https://cdn.jsdelivr.net/npm/clipboard@2/dist/clipboard.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet"> 
     <link href = "style.css" rel = "stylesheet">
 </head>
@@ -32,6 +33,7 @@
             <div class = "post" id = "imagePreview"><h2 class = "caption">Original Image</h2></div>
             <div class = "post" id = "output"><h2 class = "caption">Sorted</h2></div>
             <div class = "post" id = "canvasHolder"><h2 class = "caption">Color histogram in RGB color space</h2></div>
+            <div class = "post" id = "paletteOutput"><h2 class = "caption">Color palette</h2></div>
         </div>
     </section>
 
