--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <div class = "post" id = "output"><h2 class = "caption">Sorted</h2></div>
             <div class = "post" id = "canvasHolder"><h2 class = "caption">Color histogram in RGB color space</h2></div>
             <div class = "post" id = "paletteOutput"><h2 class = "caption">Color palette</h2></div>
+            <div class = "post" id = "colorSpaceOutput"><h2 class = "caption">Color spaces</h2></div>
         </div>
     </section>
 
