--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <div class = "post" id = "output"><h2 class = "caption">Sorted</h2></div>
             <div class = "post" id = "canvasHolder"><h2 class = "caption">Color histogram in RGB color space</h2></div>
             <div class = "post" id = "paletteOutput"><h2 class = "caption">Color palette</h2></div>
-            <div class = "post" id = "colorSpaceOutput"><h2 class = "caption">Color spaces</h2></div>
+            <div class = "post" id = "downscaleOutput"><h2 class = "caption">Downscaled Image</h2></div>
+            <div class = "post" id = "colorSpaceOutput"><h2 class = "caption">Color spaces based on downscaled image</h2></div>
         </div>
     </section>
 
