--- a/about/index.html
+++ b/about/index.html
@@ -18,6 +18,7 @@
         <div class = "buttons">
             <a href = "../">HOME</a>
             <a href = "../blend/">BLEND</a>
+            <a href = "../instant-alpha/">INSTANT ALPHA</a>
             <a class = "currentPage">ABOUT</a>
             <a href = "https://github.com/claby2/everything-colors" target = "_blank"><img src = "../images/github.png" alt = "GitHub"></a>
         </div>
