--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class = "buttons">
             <a class = "currentPage">HOME</a>
             <a href = "./blend/">BLEND</a>
+            <a href = "./instant-alpha/">INSTANT ALPHA</a>
             <a href = "./about/">ABOUT</a>
             <a href = "https://github.com/claby2/everything-colors" target = "_blank"><img src = "images/github.png" alt = "GitHub"></a>
         </div>
