added image upscaling

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <div class = "post" id = "paletteOutput"><h2 class = "caption">Color palette</h2></div>
             <div class = "post" id = "downscaleOutput"><h2 class = "caption">Downscaled Image</h2></div>
             <div class = "post" id = "colorSpaceOutput"><h2 class = "caption">Color spaces based on downscaled image</h2></div>
+            <div class = "post" id = "upscaledImage"><h2 class = "caption">Upscaled image</h2></div>
         </div>
     </section>
 
