improved ui for instant alpha component

--- a/instant-alpha/index.html
+++ b/instant-alpha/index.html
@@ -30,10 +30,9 @@
             <input id = "dropInput" type = "file" multiple=""></input>
             <h2 id = "dropText">Drop image to edit (or click here to upload)</h2>
         </div>
-
-        <div id = "alpha-canvasHolder"></div>
-        <button id = "tempButton" value = "50"></button>
+        <button id = "tempButton" value = "50">ALPHA</button>
         <input type = "range" min="0" max = "181" value="50" class = "slider" id = "intensitySlider" oninput="instantAlpha(this.value);">
+        <div id = "alpha-canvasHolder"></div>
     </section>
 
     <script src = "instant-alpha.js"></script>
