removed post class for ocr image preview

--- a/ocr/index.html
+++ b/ocr/index.html
@@ -33,7 +33,7 @@
             <h2 id = "dropText">Drop an image with text (or click here to upload)</h2>
         </div>
 
-        <div class = "post" id = "imagePreview"></div>
+        <div id = "imagePreview"></div>
         <div id = "progressBar-max"><div id = "progressBar"></div></div>
         <div id = "output-text"></div>
     </section>
