integrated 3d page and added navbar links

--- a/3d/index.html
+++ b/3d/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Client-side image manipulation.">
-    <title>Everything Colors - INSTANT ALPHA</title>
+    <title>Everything Colors - 3D</title>
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet"> 
     <link href = "../style.css" rel = "stylesheet">
 </head>
@@ -18,24 +18,24 @@
         <div class = "buttons">
             <a href = "../">HOME</a>
             <a href = "../blend/">BLEND</a>
-            <a class = "currentPage">INSTANT ALPHA</a>
+            <a href = "../instant-alpha/">INSTANT ALPHA</a>
             <a href = "../ocr/">OCR</a>
-            <a href = "../3d/">3D</a>
+            <a class = "currentPage">3D</a>
             <a href = "../about/">ABOUT</a>
             <a href = "https://github.com/claby2/everything-colors" target = "_blank"><img src = "../images/github.png" alt = "GitHub"></a>
         </div>
     </navbar>
 
     <section id = "section">
-        <div>
+        <!-- <div>
             <input id = "dropInput" type = "file" multiple=""></input>
             <h2 id = "dropText">Drop image to edit (or click here to upload)</h2>
         </div>
         <button id = "tempButton" value = "50">ALPHA</button>
         <input type = "range" min="0" max = "181" value="50" class = "slider" id = "intensitySlider" oninput="instantAlpha(this.value);">
-        <div id = "alpha-canvasHolder"></div>
+        <div id = "alpha-canvasHolder"></div> -->
     </section>
 
-    <script src = "instant-alpha.js"></script>
+    <script src = "3d.js"></script>
 </body>
 </html>
