--- a/blend/index.html
+++ b/blend/index.html
@@ -20,6 +20,7 @@
             <a class = "currentPage">BLEND</a>
             <a href = "../instant-alpha/">INSTANT ALPHA</a>
             <a href = "../ocr/">OCR</a>
+            <a href = "../3d/">3D</a>
             <a href = "../about/">ABOUT</a>
             <a href = "https://github.com/claby2/everything-colors" target = "_blank"><img src = "../images/github.png" alt = "GitHub"></a>
         </div>
