--- a/ocr/index.html
+++ b/ocr/index.html
@@ -21,6 +21,7 @@
             <a href = "../blend/">BLEND</a>
             <a href = "../instant-alpha/">INSTANT ALPHA</a>
             <a class = "currentPage">OCR</a>
+            <a href = "../3d/">3D</a>
             <a href = "../about/">ABOUT</a>
             <a href = "https://github.com/claby2/everything-colors" target = "_blank"><img src = "../images/github.png" alt = "GitHub"></a>
         </div>
