added description of 3d graph feature to about

--- a/about/index.html
+++ b/about/index.html
@@ -61,7 +61,10 @@
             <p>This feature treats the image input as a grid and uses a Depth-First search algorithm. The slider defines the intensity. Increasing the slider value would lower the needed similarity needed to continue the algorithm. The algorithm compares pixel color values in YUV.</p>
 
             <h3>Optical Character Recognition</h3>      
-            <p>OCR (Optical Character Recognition) will attempt to convert an image which contains text into a digital format. The feature here uses Tesseract.js.</p>      
+            <p>OCR (Optical Character Recognition) will attempt to convert an image which contains text into a digital format using Tesseract.js.</p>  
+            
+            <h3>3D Graph</h3>
+            <p>The 3D graph feature represents image input as a graph using Plotly JavaScript Open Source Graphing Library. The feature offers the choice of two types of graphs which are "scatter" (scatter3d) and "mesh" (mesh3d). The graph represents the RGB values of the pixel (0 to 255) on the x, y, and z-axis. Additionally, the feature downscales image to prevent it from taking a long time to process.</p>
         </article>
     </section>
 
