eliminated render-blocking resources, deferred scripts

--- a/3d/index.html
+++ b/3d/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Client-side image manipulation.">
     <title>Everything Colors - 3D</title>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet"> 
     <link href = "../style.css" rel = "stylesheet">
 </head>
@@ -44,6 +43,7 @@
         <div id = "graph"></div>
     </section>
 
-    <script src = "3d.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js" defer></script>
+    <script src = "3d.js" defer></script>
 </body>
 </html>
