--- a/blend/index.html
+++ b/blend/index.html
@@ -43,6 +43,6 @@
         <div id = "blendOutput"></div>
     </section>
 
-    <script src = "blend.js"></script>
+    <script src = "blend.js" defer></script>
 </body>
 </html>
