--- a/ocr/index.html
+++ b/ocr/index.html
@@ -7,7 +7,6 @@
     <title>Everything Colors - OCR</title>
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet"> 
     <link href = "../style.css" rel = "stylesheet">
-    <script src='https://unpkg.com/tesseract.js@v2.1.0/dist/tesseract.min.js'></script>
 </head>
 <body>
 
@@ -39,6 +38,7 @@
         <div id = "output-text"></div>
     </section>
 
-    <script src = "ocr.js"></script>
+    <script src='https://unpkg.com/tesseract.js@v2.1.0/dist/tesseract.min.js' defer></script>
+    <script src = "ocr.js" defer></script>
 </body>
 </html>
