--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </section>
 
-    <script src = "https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
-    <script src = "script.js"></script>
+    <script src = "https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js" defer></script>
+    <script src = "script.js" defer></script>
 </body>
 </html>
