--- a/instant-alpha/index.html
+++ b/instant-alpha/index.html
@@ -36,6 +36,6 @@
         <div id = "alpha-canvasHolder"></div>
     </section>
 
-    <script src = "instant-alpha.js"></script>
+    <script src = "instant-alpha.js" defer></script>
 </body>
 </html>
